...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" highlightedImage="placeholder" highlighted="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9uI-CV-qBd" userLabe
                                                    <rect key="frame" x="0.0" y="-58" width="414" height="407"/>
                                                    <accessibility key="accessibilityConfiguration">
...
                                </connections>
                            </searchBar>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Gousto_logo" translatesAutoresizingMaskIntoConstraints="NO" id="ILT-we-IYm">
                                <rect key="frame" x="0.0" y="32" width="414" height="74"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zoR-e3-vr6">
                                <rect key="frame" x="17" y="114" width="380" height="143"/>
                                <accessibility key="accessibilityConfiguration" identifier="detailTitle"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="143" id="hbQ-QH-NvU"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nts-4I-VF3">
                                <rect key="frame" x="17" y="336" width="380" height="304"/>
                                <accessibility key="accessibilityConfiguration" identifier="detailDescription"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5br-1R-FgT">
                                <rect key="frame" x="161" y="648" width="81" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="detailPrice"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="47" id="9OH-iA-8bo"/>
...
                                    <constraint firstAttribute="height" constant="34" id="z63-sG-UQv"/>
                                </constraints>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="AsZ-IQ-WbZ"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mz-Tm-Q8k">
                                <rect key="frame" x="165" y="265" width="77" height="63"/>
                                <accessibility key="accessibilityConfiguration" identifier="detailSize"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="63" id="mmA-0W-DxO"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Allergy Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qT1-mQ-MdC">
                                <rect key="frame" x="20" y="703" width="377" height="93"/>
                                <accessibility key="accessibilityConfiguration" identifier="detailAllergy"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="93" id="PAv-ao-A86"/>
...
